--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,13 @@
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Playfair+Display:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>React Weather App</title>
