--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Weather App" />
 
+    <!-- Icon -->
+    <link rel="icon" href="favicon.ico" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
